# libft

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.c
inc/: character.h  farmhash.h  io.h  libft.h  memory.h  s_list.h  string.h  t_bTree.h  t_hashTable.h  t_rb.h  t_sList.h  t_set.h
src/: farmhash.c  ft_hashmap.c  ft_hexdump.c  ft_lstdelone.c  ft_lstfilter.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsort.c  ft_memcpy_avx.c  ft_memcpy_x86.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_read_file.c  ft_strlen.c  ft_substr.c  ft_vector.c
src/character/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_tolower.c  ft_toupper.c
src/io/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_read_file.c
src/memory/: ft_bzero.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memcpy_avx.c  ft_memcpy_x86.c  ft_memmove.c  ft_memset.c
src/s_list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfilter.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_lstsort.c
src/string/: ft_itoa.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
src/strings/: clean_split.c  ft_atoi.c  ft_itoa.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
src/t_bTree/: t_bTree.c
src/t_hashTable/: farmhash.c  t_hashTable.c
src/t_rb/: t_rb.c
src/t_sList/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfilter.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_lstsort.c
src/t_set/: t_set.c
